Update code and adding js code

--- a/index.html
+++ b/index.html
@@ -269,14 +269,16 @@
   </div>
   <!-- end-categories -->
   <!-- start video -->
-  <div class="video mb-5">
-    <video autoplay muted loop>
-      <source src="assets/images/Man Fashion Film 2021_ Istanbul City_Shot on Sony A7iii Cine4.mp4" type="video/mp4">
-    </video>
-    <div class="title-video">
-      <h2 class="text-light text-uppercase">Fashion</h2>
-      <p class="text-light">We have all what you want about fashion. just press the button below</p>
-      <a href="#" class="text-light rounded-pill">MORE</a>
+  <div class="video mb-5 p-3">
+    <div class="container d-flex justify-content-center align-items-center">
+      <video autoplay muted loop>
+        <source src="assets/images/Man Fashion Film 2021_ Istanbul City_Shot on Sony A7iii Cine4.mp4" type="video/mp4">
+      </video>
+      <div class="title-video">
+        <h2 class="text-light text-uppercase">Fashion</h2>
+        <p class="text-light">We have all what you want about fashion. just press the button below</p>
+        <a href="#" class="text-light rounded-pill">MORE</a>
+      </div>
     </div>
   </div>
   <!-- end video -->
@@ -344,6 +346,7 @@
     <div class="container">
     <h2 class="text-uppercase fw-bold mb-5 text-center">contact us</h2>
     <div class="cont w-fit">
+      <span class="count-text d-block ms-auto">0/100</span>
       <textarea class="p-3" name="txt" placeholder="type here ..."></textarea>
       <span class="d-block text-start bg-black text-light ">Send Message</span>
     </div>
@@ -362,6 +365,10 @@
     </div>
   </div>
   <!-- end footer -->
+  <button>
+    <i class="fa-solid fa-arrow-up"></i>
+  </button>
+  <script src="main.js"></script>
 </body>
 
 </html>
