--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="VUL is a page of fashion" >
+  <meta name="description" content="VUL is a page of fashion">
   <meta name="description" content="fashion page">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="css/style-css.css">
@@ -243,7 +243,9 @@
         <div class="col-sm-6 col-md-4 col-lg-3 mb-3">
           <div class="cate p-3 rounded-2">
             <a href="">
-              <img class="mb-2" src="assets/images/football-socks-icon-glyph-football-socks-icon-websit-white-background-generative-ai_945369-3031-removebg-preview.png" alt="">
+              <img class="mb-2"
+                src="assets/images/football-socks-icon-glyph-football-socks-icon-websit-white-background-generative-ai_945369-3031-removebg-preview.png"
+                alt="">
               <div class="text-black fw-bold">SOCKS</div>
             </a>
           </div>
@@ -251,7 +253,9 @@
         <div class="col-sm-6 col-md-4 col-lg-3 mb-3">
           <div class="cate p-3 rounded-2">
             <a href="">
-              <img class="mb-2" src="assets/images/cartoon-illustration-shirt-with-collar-button-down_988987-18917-removebg-preview.png" alt="">
+              <img class="mb-2"
+                src="assets/images/cartoon-illustration-shirt-with-collar-button-down_988987-18917-removebg-preview.png"
+                alt="">
               <div class="text-black fw-bold">T-SHIRTS</div>
             </a>
           </div>
@@ -259,7 +263,8 @@
         <div class="col-sm-6 col-md-4 col-lg-3 mb-3">
           <div class="cate p-3 rounded-2">
             <a href="">
-              <img class="mb-2" src="assets/images/cartoon-illustration-man-trench-coat-tie-generative-ai_1034964-6664.avif" alt="">
+              <img class="mb-2"
+                src="assets/images/cartoon-illustration-man-trench-coat-tie-generative-ai_1034964-6664.avif" alt="">
               <div class="text-black fw-bold">COATS</div>
             </a>
           </div>
@@ -290,7 +295,7 @@
         <div class="col-md-6 col-lg-4">
           <div class="testimo px-4 pt-3 pb-2 mb-2 text-center rounded-3">
             <p class="text-black-50 mb-2">
-              "i love this website everything that i want i found it in this site. 
+              "i love this website everything that i want i found it in this site.
               if you haven't tried buying something in this site ,well you have to."
             </p>
             <img class="img-fluid" src="assets/images/image-avatar.webp" alt="">
@@ -300,7 +305,7 @@
         <div class="col-md-6 col-lg-4">
           <div class="testimo px-4 pt-3 pb-2 mb-2 text-center rounded-3">
             <p class="text-black-50 mb-2">
-              "i love this website everything that i want i found it in this site. 
+              "i love this website everything that i want i found it in this site.
               if you haven't tried buying something in this site ,well you have to."
             </p>
             <img class="img-fluid" src="assets/images/jurica-koletic-7YVZYZeITc8-unsplash.jpg" alt="">
@@ -310,7 +315,7 @@
         <div class="col-md-6 col-lg-4">
           <div class="testimo px-4 pt-3 pb-2 mb-2 text-center rounded-3">
             <p class="text-black-50 mb-2">
-              "i love this website everything that i want i found it in this site. 
+              "i love this website everything that i want i found it in this site.
               if you haven't tried buying something in this site ,well you have to."
             </p>
             <img class="img-fluid" src="assets/images/edward-cisneros-_H6wpor9mjs-unsplash.jpg" alt="">
@@ -332,7 +337,9 @@
           <img src="assets/images/Font-Prada-Logo-removebg-preview.png" alt="">
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
-          <img src="assets/images/png-transparent-zara-logo-zara-logo-inditex-brand-lacoste-logo-angle-text-trademark-removebg-preview.png" alt="">
+          <img
+            src="assets/images/png-transparent-zara-logo-zara-logo-inditex-brand-lacoste-logo-angle-text-trademark-removebg-preview.png"
+            alt="">
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <img src="assets/images/Vogue-logo.png" alt="">
@@ -344,12 +351,17 @@
   <!-- start contact-us -->
   <div class="contact-us  py-5">
     <div class="container">
-    <h2 class="text-uppercase fw-bold mb-5 text-center">contact us</h2>
-    <div class="cont w-fit">
-      <span class="count-text d-block ms-auto">0/100</span>
-      <textarea class="p-3" name="txt" placeholder="type here ..."></textarea>
-      <span class="d-block text-start bg-black text-light ">Send Message</span>
-    </div>
+      <h2 class="text-uppercase fw-bold mb-5 text-center">contact us</h2>
+      <div class="cont w-fit">
+
+        <div class="width-number d-flex align-items-center">
+          <div class="inside-area"></div>
+          <span class="count-text d-block ms-auto">0</span>
+        </div>
+
+        <textarea class="p-3" name="txt" placeholder="type here ..."></textarea>
+        <span class="d-block text-start bg-black text-light ">Send Message</span>
+      </div>
     </div>
   </div>
   <!-- end contact-us -->
