adding some codes

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
         </div>
 
         <textarea class="p-3" name="txt" placeholder="type here ..."></textarea>
-        <span class="d-block text-start bg-black text-light ">Send Message</span>
+        <span class="d-block text-start bg-black text-light sending-message">Send Message</span>
       </div>
     </div>
   </div>
